[TASK] Fix overflow linechart

--- a/Resources/Private/Styles/Base/_widget.scss
+++ b/Resources/Private/Styles/Base/_widget.scss
@@ -115,6 +115,11 @@
 	color: $secondary-color;
 }
 
+.widget-chart {
+	width: 100%;
+	height: calc(100% - #{$block-gutter});
+}
+
 .widget-edit {
 	width: 45px;
 	text-align: center;
